# bmi_life_insurance_test

./: .flake8  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: main.yml
docker/: Dockerfile
scripts/: run_api.sh
src/life_insurance/: constants.py
src/life_insurance/api/: app.py
src/life_insurance/api/handlers/: quote_handler.py
src/life_insurance/entities/: __init__.py  person.py  quote.py
src/life_insurance/ml/autoboosting/: auto_estimator.py  autotuner.py
src/life_insurance/ml/feature_engineering/: utils.py
src/life_insurance/ml/training/: train.py
src/life_insurance/quotes/: base_quote_calculator.py  bmi_quote_calculator.py
src/life_insurance/utils/: bmi.py  quote.py
tests/src/life_insurance/entities/: test_person.py
